--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,3 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-
-		<div>
-			<header>
-				<h1>YmasTree</h1>
-				<h2>Starting on December 1st</h2>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/">Why mess up a Christmas Tree?</a>
-				</p>
-				<p>
-					<a href="/contact">About Me</a>
-				</p>
-				<p>
-					<a href="/users/new">Sign up</a>
-				</p>
-			</nav>
-			<div></div>
-			<footer>
-				<p>
-					&copy; Copyright 2011 by YmasTree
-				</p>
-			</footer>
-		</div>
+<%= link_to "Sign up now!", '/signup', :class => "signup_button round" %>
