--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,26 @@
           <li>
             <%= link_to "Home", "/" %>
           </li>
+          <% if signed_in? %>
+          <li>
+            <%= link_to "Profile", current_user %>
+          </li>
+          <% end %>
           <li>
             <%= link_to "Why mess up a Christmas Tree?", '#' %>
           </li>
           <li>
             <%= link_to "About Me", '#' %>
           </li>
+          <% if signed_in? %>
           <li>
-            <%= link_to "Sign In", '#' %>
+            <%= link_to "Sign out", signout_path, :method => :delete %>
           </li>
+          <% else %>
+          <li>
+            <%= link_to "Sign in", signin_path %>
+          </li>
+          <% end %>
         </ul>
       </nav>
       <section>
